--- a/views/courseprovider.ejs
+++ b/views/courseprovider.ejs
@@ -18,7 +18,7 @@
     </style>
     <title>Sam Fauzan Course</title>
 </head>
-<body style="background-color: #DB7093;">
+<body>
     <nav id="" class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/"><i class="fa fa-book"></i> Sam Fauzan Course</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,24 +27,46 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/leaders/">Leaders</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/courseproviders">Course Providers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/instructor">Instructor</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/participants">Participants</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/course">Course</a>
-            </li>
+                <a class="nav-link" href="/leaders/">Leaders</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Courseproviders">Course Providers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/instructor">Instructor</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/participants">Participants</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/course">Course</a>
+              </li>
           </ul>
         </div>
       </nav>
-    <h1 class="jumbotron custom-jumbotron" style="height:100hv; padding-top:250px; text-align: center; background-color: #DB7093 ">Welcome To <i class="fa fa-book"></i> Sam Fauzan Course</h1>
 
+      <h1 style="background-color: #DB7093; text-align: center;" class="jumbotron custom-jumbotron">List Of Leaders</h1>
+      
+
+      <table class="table table-hover">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">No.</th>
+            <th scope="col">Course Provider Name</th>
+            <th scope="col">Location</th>
+            <th scope="col">Laeder Name</th>
+          </tr>
+        </thead>
+        <tbody>
+            <% for(let i = 0 ; i < data.length; i++) {%>
+          <tr>
+            <th scope="row"><%= i+1%></th>
+            <td><%= data[i].name%></td>
+            <td><%= data[i].location%></td>
+            <td><%= data[i].Leader.getFullName()%></td>
+          </tr>
+          <%}%>
+        </tbody>
+      </table>
 </body>
 </html>
